[tool.poetry]
name = "python-youtube-dl-by-list"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = {extras = ["default"], version = "^2024.7.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
